--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,27 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
     "module": "commonjs",
-    "target": "ES2022",
-    "esModuleInterop": true,
-    "strict": true,
-    "outDir": "dist",
-    "sourceMap": true,
-    "inlineSources": true,
+    "declaration": true,
+    "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "target": "es2017",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "incremental": true,
     "skipLibCheck": true,
+    "strictNullChecks": true,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false,
+    "baseUrl": ".",
+    "esModuleInterop": true,
+    "strict": true,
+    "inlineSources": true,
     "resolveJsonModule": true,
+    "strictPropertyInitialization": false,
     "paths": {
       "@src/*": ["src/*"],
       "@core/*": ["src/core/*"],
