--- a/package.json
+++ b/package.json
@@ -41,9 +41,15 @@
     "@nestjs/common": "^10.3.3",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.3.3",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-fastify": "^10.3.3",
+    "@prisma/client": "^5.9.1",
+    "argon2": "^0.31.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.6.1",
@@ -74,6 +80,7 @@
     "nock": "^13.5.1",
     "nyc": "^15.1.0",
     "prettier": "^3.2.5",
+    "prisma": "^5.9.1",
     "rimraf": "^5.0.5",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
